[project]
name = "sharebin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=5.0.0",
    "fastapi-mail>=1.5.7",
    "fastapi[standard]>=0.119.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
]
